--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Самойлов и Ко</title>
         <link rel="stylesheet" href="Style.css"/>
+        <meta name="google-site-verification" content="aMcoKGCBs0V4ahDnXr9sztsgI4QIPGl6OMXmg_BYf2w" />
 
     </head>
 
